tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/without-value-4.stderr
TOML parse error at line 1, column 9
  |
1 | "key" = 
  |         ^
invalid string
expected `"`, `'`
